tests/positive/basic/string_empty_helpers/input.ci
void main() {
    print(toString(len("")) + "\n");
    print(toString(contains("", "")) + "\n");
    print(toString(startsWith("", "")) + "\n");
    print(toString(endsWith("", "")) + "\n");
    print(toString(indexOf("", "")) + "\n");
}
