tests/negative/semantic/unknown_builtin_signature/input.ci
void main() {
    print(toString(len("a", "b")) + "\n");
}
